changes on accordion made with success

--- a/accordionDemo/style.css
+++ b/accordionDemo/style.css
@@ -11,7 +11,7 @@ body{
     align-items: center;
     gap: 30px;
     min-height: 100vh;
-    background-color: rgb(253, 250, 255);
+    background-color: rgb(14, 14, 14);
 }
 
 .main-container{
@@ -21,21 +21,23 @@ body{
     gap: 10px;
 
     .section-wrapper{
-        background-color: white;
-        border-radius: 15px;
-        border: 1.5px solid #eee;
+        /* background-color: rgba(255, 255, 255, 0); */
+        /* border-radius: 15px; */
+        /* border: 1.5px solid #eee; */
+        border-bottom: 1.5px solid #b4b4b4;
         overflow: hidden;
+        color: #b4b4b4;
 
         .question{
             display: flex;
             justify-content: space-between;
-            padding: 10px;
+            padding: 10px 0;
             /* border-radius: 15px; */
             cursor: pointer;
             transition-duration: 0.2s;
         }
         .active{
-            background-color: rgb(115, 0, 255);
+            /* background-color: rgb(115, 0, 255); */
             color: rgb(253, 250, 255);
             span i{
                 transform: rotate(45deg);
