--- a/accordionDemo/style.css
+++ b/accordionDemo/style.css
@@ -52,7 +52,7 @@ body{
             transition: all 0.3s ease;
             
             & p{
-                padding: 10px;
+                padding: 10px 0;
                 border-radius: 15px;
             }
         }
